===========================
Isotope eCommerce Changelog
===========================

Version 0.2.0
------------------------------
- Added label for isotope_rules extension folder
- Added support for percentage surcharge for payment and shipping price
- Added italian translation for frontend information
- Fixed field tl_iso_rules.applyTo not visible in the palette
- Fixed PayPal checkout not charging for shipping price
- Fixed back button on attributes page (Ticket #259)

Version 0.2.rc1 (2010-10-31)
------------------------------
- Added: "Default" option for tax class
- Added: New mode setting for rules max/min quantity
- Improved: Replace InsertTags in ##cart_text## and ##cart_html## templates
- Improved: Only show price for payment and shipping module if greater 0
- Improved: Hide "Default address" checkboxes for guests
- Improved: Cleaned and optimized attribute configuration/setup
- Fixed: FE_USER_LOGGED_IN might be true but no user available (Ticket #213)
- Fixed: Email language was not correctly detected under certain circumstances
- Fixed: Potential database caching issue in ePay payment modules
- Fixed: images did not change on ajax update
- Fixed: added default palette for checkout module if no checkout method (guest/member) is selected
- Fixed: tax total was not rounded according to store config
- Fixed: PayPal Standard payment charges included taxes twice
- Fixed: Missing argument 2 for IsotopeRules::findCoupon()
- Fixed: Incorrect default value for tl_iso_products.shipping_weight
- Fixed various issues with PayPal sandbox processing
- Fixed address validation in checkout module

Version 0.2.beta2 (2010-09-27)
------------------------------
- Added: New "link target" field and help wizard to media manager
- Added: IsotopeGallery now supports link targets and "rel" attributes
- Added: Support for 13 more currencies in ePay Standard payment module
- Added: New payment module for ePay in-shop payment processing
- Added: CSS class even/odd for product list