@@ -120,7 +120,7 @@ class PaymentEPay extends IsotopePayment
 <input type="hidden" name="accepturl" value="' . $this->Environment->base . $this->generateFrontendUrl($objPage->row(), '/step/complete') . '">
 <input type="hidden" name="declineurl" value="' . $this->Environment->base . $this->generateFrontendUrl($objPage->row(), '/step/failed') . '">
 
-<input type="hidden" name="instantcapture" value="1">
+<input type="hidden" name="instantcapture" value="' . ($this->trans_type == 'auth' ? '0' : '1') . '">
 <input type="hidden" name="md5key" value="' . md5($this->arrCurrencies[$this->Isotope->Config->currency] . $intTotal . $objOrder->id . $this->epay_secretkey) . '">
 <input type="hidden" name="cardtype" value="0">
 <input type="hidden" name="windowstate" value="2">
