@@ -374,6 +374,7 @@ CREATE TABLE `tl_iso_payment_modules` (
   `maximum_total` decimal(12,2) NOT NULL default '0.00',
   `new_order_status` varchar(255) NOT NULL default '',
   `postsale_mail` int(10) unsigned NOT NULL default '0',
+  `trans_type` varchar(8) NOT NULL default '',
   `paypal_account` varchar(255) NOT NULL default '',
   `payflowpro_user` varchar(255) NOT NULL default '',
   `payflowpro_vendor` varchar(255) NOT NULL default '',
